# C-Raylib-Example

./: .gitignore  README.md
battle/: CMakeLists.txt  README.md
battle/include/: asset.h  enemy.h  enemyhandler.h  game.h  gamevar.h  includes.h  player.h  playerhandler.h  rect.h
battle/src/: asset.c  enemyhandler.c  game.c  main.c  playerhandler.c
cmake_example/: CMakeLists.txt
cmake_example/src/: main.c
window/: main.c  makefile
